Foi criado o serviço "getByName".